# ai-trainer-gen

./: .gitignore  20260226_gui.md  20260226_week3_ce_wrapper.md  20260226_week4_store_cli.md  AI_Game_Trainer_Generator_设计文档.md  CLAUDE.md  DEVELOPMENT.md  PROJECT_PLAN.md  README.md  README_ja.md  README_zh.md  pyproject.toml
docs/plans/: 2026-02-27-phase2-completion.md  2026-02-27-phase3a-com-bridge-gui-wiring.md
memory/: MEMORY.md
src/: __init__.py  exceptions.py
src/analyzer/: __init__.py  llm_analyzer.py  models.py  validator.py
src/analyzer/prompts/: __init__.py  builder.py
src/ce_wrapper/: __init__.py  com_bridge.py  ct_builder.py  models.py  sandbox.py
src/cli/: __init__.py  main.py
src/detector/: __init__.py  engine_detector.py  models.py
src/dumper/: __init__.py  base.py  il2cpp.py  models.py  ue.py  unity_mono.py
src/gui/: __init__.py  main_window.py  viewmodels.py  worker.py
src/gui/pages/: __init__.py  feature_config.py  generate.py  process_select.py  script_manager.py
src/resolver/: __init__.py  base.py  factory.py  il2cpp_resolver.py  models.py  mono_resolver.py  unreal_resolver.py
src/store/: __init__.py  db.py  models.py
src/store/migrations/: schema.sql
tests/unit/: test_analyzer.py  test_ce_wrapper.py  test_cli.py  test_detector.py  test_dumper_models.py  test_gui_viewmodels.py  test_gui_widgets.py  test_resolver.py  test_store.py
