[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-trainer-gen"
version = "0.1.0"
description = "AI-powered game trainer generator based on Cheat Engine"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "luaparser>=3.1.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
    "pymem>=1.12.0",
    "PyQt6>=6.7.0",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[project.scripts]
generate-trainer = "scripts.generate_trainer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:langsmith_plugin"
markers = [
    "integration: requires a real game process (deselect with -m 'not integration')",
    "windows_only: requires Windows + CE installation",
]
